<resources>
    <string name="app_name">Viso</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Viso</string>
    <string name="nav_header_subtitle">Mejora tus habilidades viso-motrices</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="btn_entendido">Entendido</string>
    <string name="main_email">viso.ipn@gmail.com</string>

    <!--************************************ BASE DE DATOS **************************************-->
    <string name="ADD_USUARIO">https://viso-upiiz.000webhostapp.com/addUsuario.php</string>
    <string name="ADD_NINO">https://viso-upiiz.000webhostapp.com/addNino.php</string>
    <string name="ADD_ACTIVIDAD">https://viso-upiiz.000webhostapp.com/addActividad.php</string>
    <string name="READ_USUARIO">https://viso-upiiz.000webhostapp.com/readUsuario.php</string>
    <string name="READ_NINO">https://viso-upiiz.000webhostapp.com/readNino.php</string>
    <string name="READ_ACTIVIDAD">https://viso-upiiz.000webhostapp.com/readActividad.php</string>
    <string name="VERIFY_USUARIO">"https://viso-upiiz.000webhostapp.com/verifyUsuario.php"</string>
    <!--*****************************************************************************************-->

    <string name="presentacion_titulo">Antes de empezar</string>
    <string name="presentacion_1">
        Viso es una herramienta que tiene como objetivo el apoyar a los niños con el desarrollo de sus
        habilidades viso-motrices.
    </string>
    <string name="presentacion_2">
        Esto mediante la réplica de una serie de figuras geométricas basadas en la teoría de los test
        VMI y Bender.
    </string>
    <string name="presentacion_3">
        Podrás encontrar mas información acerca de las habilidades viso-motrices y los test en la
        seccion "Información".
    </string>
    <string name="login_cuenta_exist"><u>¿Ya tienes una cuenta?</u>.</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_actividad">Actividad</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_informacion">Informacion</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="opciones_item01">Generar copia de seguridad</string>
    <string name="opciones_item02">Restaurar información</string>
    <string name="opciones_item03">Generar documentación</string>
    <string name="opciones_item04">Eliminar cuenta</string>
    <string name="title_activity_actividad">Actividad</string>
    <string name="actividad_subtitle">Replica la imágen</string>
    <string name="actividad_listo">¿Listo?</string>
    <string name="actividad_toma_foto">¡Toma una foto!</string>
    <string name="actividad_boton_foto">Tomar foto</string>
    <string name="actividad_confirm">¿Se parecen?</string>
    <string name="actividad_calificacion">Tu calificación</string>
    <string name="actividad_muestra">Imagen de muestra</string>
    <string name="actividad_realizadan">Imagen realizada</string>
    <string name="felicidades">¡Felicidades!</string>
    <string name="feliciaddes_2">Has Realizado todas las actividades</string>
    <string name="feliciaddes_3">Puedes generar la documentación de tus actividades en la sección "Configuración"</string>

    <string name="configuracion_descripcion01">Genera una copia de seguridad en una base de datos remota
    desde la cuál podrás restaurar la información almacenada desde otro dispositivo o en caso de perder
    la información almacenada en este dispositivo</string>
    <string name="configuracion_descripcion02">Restaura la información de los usuarios asi como de las
    actividades realizadas desde una base de datos remota. Es necesario haber generado una copia de
    seguridad con anterioridad</string>
    <string name="configuracion_descripcion03">Genera un documento PDF con la información del usuario
    elegido y todas las actividades que éste ha realizado (Se recomienda realizarlo al finalizar el total de actividades)</string>
    <string name="configuracion_descripcion04">Elimina la información de uno de los usuarios niños asi
    como de las actividades realizadas por éste. Una vez eliminado el usuario y su información no será
    posible recuperarla a menos que exista una copia de seguridad y se restaure la información</string>

    <string name="informacion_item01_titulo">Habilidades viso-motrices</string>
    <string name="informacion_item01">¿Que son las habilidades viso-motrices?</string>
    <string name="informacion_item01_text01">
        Las habilidades viso-motrices son todas aquellas actividades de movimientos controlados,
        es decir que requieren de mucha precisión, donde se utilizan los procesos óculo manual
        en forma simultánea (ojo, mano, dedos), como por ejemplo acciones de cortar, pintar, rasgar,
        pegar, etc. Dichas habilidades se desarrollan en los primeros años de la educación básica
    </string>
    <string name="informacion_item01_referencia">
        Ramírez, C., Arteaga, M., y Luna, H. (2020). Las habilidades de coordinación visomotriz
        para el aprendizaje de la escritura. Guayaquil. Ecuador: Universidad y Sociedad.
    </string>

    <string name="informacion_item02_titulo">Test de Bender</string>
    <string name="informacion_item02">¿Que es el test de Bender?</string>

    <string name="informacion_item02_referencia">
        Bosque, S. G. (2011). Estudio de la Integración Visuomotora en Niños con Altas Capacidades
        Intelectuales. Alicante,España: Universidad de Alicante.
    </string>
    <string name="informacion_item02_text01">
        El test de Bender es un test vinculado a la psicología gestáltica usada para evaluar
        el desarrollo de la inteligencia en los niños, así como posibles trastornos y discapacidades
        que puedan presentar. Consiste en que el niño replique una serie de figuras geométricas dadas.
    </string>
    <string name="informacion_item02_text02">
        La Dra. Bender encontró que la percepción y la reproducción de las figuras varía en función
        del nivel de maduración y desarrollo de cada individuo y de las alteraciones o trastornos
        neurológicos, determinando que la mayoría de los niños sin alteraciones neurológicas, a los
        once años son capaces de copiar las nueve figuras propuestas en el test de Bender sin errores
    </string>

    <string name="informacion_item03_titulo">Test VMI</string>
    <string name="informacion_item03">¿Que es el test VMI?</string>
    <string name="informacion_item03_text01">El VMI (Visual Motor Integration Test). Se trata de
        un examen estandarizado de integración viso-motora, está diseñado para niños de entre 3 a 17
        años y consiste en que el niño replique una serie de figuras geométricas dadas, es el test
        más investigado, y considerado como más valido, de su clase. </string>
    <string name="informacion_item03_text02">
        Se puede utilizar para determinar la presencia y grado de dificultades visuales y
        motrices en los niños, así como identificar a los niños que deben ser referidos a un
        profesional de la salud para diagnóstico y tratamiento.
    </string>

    <string name="informacion_item03_referencia">
        Merino, C. (2013). Test gestáltico bender modificado y vmi-4: comparación de la validez
        incremental. Perú: Universidad de San Martín de Porres.
    </string>


    <string name="informacion_item04_titulo">¿Cómo se evaluan las actividades?</string>
    <string name="informacion_item04">Evaluación de las actividades</string>
    <string name="informacion_item04_text01">
        Las puntuaciones del test Beery VMI son esencialmente las mismas usadas en las ediciones previas
        (un punto por cada ítem imitado o copiado, deteniéndose al obtener tres fallos consecutivos) Para
        obtener un puntaje bruto, el número de elementos que no se han completado con éxito antes de
        este límite máximo de tres fallos consecutivos se resta del tope. Por ejemplo, si un niño falla los
        ítems 5, 8, y 11, su puntaje bruto es 11.
    </string>
    <string name="informacion_item04_text02">
        En base al puntaje bruto, podemos determinar si está a corde con su edad biológica.
        Estar por debajo de la edad mostrada en la tabla podría significar que hay un problema
        con sus habilidades viso motrices.
    </string>

    <string name="informacion_item05_titulo">Acerca de esta aplicación</string>
    <string name="informacion_item05">Acerca de esta aplicación</string>
    <string name="informacion_item05_text01">
      Un mal desarrollo del sistema visor-motriz repercute en gran medida con el
        desempeño académico de los niños en los primeros años escolares ya que para lograr una
        escritura satisfactoria implica una serie de movimientos controlados y deliberados que
        requieren de mucha precisión, conjuntamente trabajando visión con las manos, muñecas y
        dedos para rasgar, cortar, pintar, escribir entre otras muchas actividades. De esta forma
        un desarrollo viso-motriz correcto es clave para un correcto desarrollo académico.
    </string>
    <string name="informacion_item05_text02">
        Para cualquier duda acerca de la aplicación, asi como reportar un error o "bug" contactar
        por el siguiente correo:
    </string>

    <string name="instruccion">Asegúrate que la habitación esté bien iluminada</string>
    <string name="instruccion2">Usa tu celular verticalmente al tomar la foto</string>
    <string name="instruccion3">No puedes utilizar regla o compás</string>
    <string name="instruccion3_2">Únicamente tu lápiz</string>
    <string name="instruccion4">Si la imágen no se ve bien</string>
    <string name="instruccion4_2">inténtalo de nuevo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>