<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/icons8_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/icons8_feliz"
            android:title="@string/menu_cuenta" />
        <item
            android:id="@+id/nav_actividad"
            android:icon="@drawable/icons8_pencil"
            android:title="@string/menu_actividad" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/icons8_info"
            android:title="@string/menu_informacion" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/icons8_gear"
            android:title="@string/menu_configuracion" />
    </group>
</menu>