<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary01"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".herramientas.splashscreen.Completado">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/autour_one"
            android:textSize="@dimen/text_04"
            android:paddingTop="@dimen/text_03"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/felicidades"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/autour_one"
            android:textSize="@dimen/text_03"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/text_02"
            android:paddingRight="@dimen/text_02"
            android:paddingTop="@dimen/text_02"
            android:paddingBottom="@dimen/text_02"
            android:id="@+id/tv01_completado"
            android:gravity="center"
            android:text="@string/feliciaddes_2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/iv_completado"
            android:src="@drawable/ic_main_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/autour_one"
            android:textSize="@dimen/text_03"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/text_02"
            android:paddingRight="@dimen/text_02"
            android:id="@+id/tv02_completado"
            android:paddingTop="@dimen/text_02"
            android:paddingBottom="@dimen/text_02"
            android:gravity="center"
            android:text="@string/feliciaddes_3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            android:layout_weight="0"
            android:id="@+id/btn_completado"
            android:text="@string/btn_entendido">
        </Button>
    </LinearLayout>
</LinearLayout>